[package]
name = "dd-delaunay"
version = "0.1.1"
edition = "2021"
description = "D-dimensional Delaunay triangulations, inspired by CGAL."
repository = "https://github.com/TimTheBig/d-delaunay"
readme = "README.md"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.20"
nalgebra = "0.33"
num-traits = "0.2"
peroxide = "0.39"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[dev-dependencies]
dd-delaunay = { path = "./", features = ["serde"]}
serde_json = "1.0"
serde_test = "1.0"

[lints.rust]
unsafe_code = { level = "forbid", priority = 3 }
dead_code = "allow"
missing_docs = { level = "warn", priority = 1 }
unused = { level = "deny", priority = 2 }

[lints.clippy]
extra_unused_type_parameters = "warn"
